--- a/src/components/NewBook/NewBook.css
+++ b/src/components/NewBook/NewBook.css
@@ -1,5 +1,5 @@
 .new-book {
-  background-color: #a892ee;
+  background-color: #D6FFF6;
   padding: 1rem;
   margin: 2rem auto;
   width: 50rem;
@@ -13,8 +13,8 @@
   font: inherit;
   cursor: pointer;
   padding: 1rem 2rem;
-  border: 1px solid #40005d;
-  background-color: #40005d;
+  border: 1px solid #4DCCBD;
+  background-color: #4DCCBD;
   color: white;
   border-radius: 12px;
   margin-right: 1rem;
@@ -22,8 +22,8 @@
 
 .new-book button:hover,
 .new-book button:active {
-  background-color: #510674;
-  border-color: #510674;
+  background-color: #19bba8;
+  border-color: #19bba8;
 }
 
 .new-book button.alternative {
